--- a/Biblio.bib
+++ b/Biblio.bib
@@ -60,12 +60,9 @@
   journal   = {CoRR},
   volume    = {abs/1207.3502},
   year      = {2012},
-  url       = {http://arxiv.org/abs/1207.3502},
   archivePrefix = {arXiv},
   eprint    = {1207.3502},
-  timestamp = {Mon, 13 Aug 2018 16:48:37 +0200},
-  biburl    = {https://dblp.org/rec/journals/corr/abs-1207-3502.bib},
-  bibsource = {dblp computer science bibliography, https://dblp.org}
+  timestamp = {Mon, 13 Aug 2018 16:48:37 +0200}
 }
 
 
@@ -385,6 +382,18 @@ author = {Youn Doh Ha and Florin Bobaru},
 keywords = {Crack-path instability, Crack branching, Dynamic brittle fracture, Peridynamics, Nonlocal methods}
 }
 
+@article{NAIRN_2018,
+title = "Direct comparison of anisotropic damage mechanics to fracture mechanics of explicit cracks",
+journal = "Engineering Fracture Mechanics",
+volume = "203",
+pages = "197 - 207",
+year = "2018",
+note = "8th ESIS TC4 International Conference- Fracture of Polymers, Composites and Adhesives",
+issn = "0013-7944",
+doi = "https://doi.org/10.1016/j.engfracmech.2018.05.047",
+author = "John A. Nairn"
+}
+
 @article{Nairn_2011,
 author = {Bardenhagen, Scott and Nairn, John and Lu, Hongbing},
 year = {2011},
@@ -530,6 +539,18 @@ year = {1995},
 issn = {0020-7683},
 doi = {10.1016/0020-7683(94)00282-2},
 author = {T. Belytschko and Y.Y. Lu and L. Gu and M. Tabbara}
+}
+
+@article{BELYTSCHKO_1995b,
+title = "Crack propagation by element-free Galerkin methods",
+journal = "Engineering Fracture Mechanics",
+volume = "51",
+number = "2",
+pages = "295 - 315",
+year = "1995",
+issn = "0013-7944",
+doi = "https://doi.org/10.1016/0013-7944(94)00153-9",
+author = "T. Belytschko and Y.Y. Lu and L. Gu"
 }
 
 @ARTICLE{Barenblatt, 
